--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vue-router": "4"
   },
   "devDependencies": {
+    "@types/node": "^18.7.16",
     "@vitejs/plugin-vue": "^3.1.0",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
