--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4",
     "@types/node": "^18.7.16",
     "@vitejs/plugin-vue": "^3.1.0",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.4.0",
+    "husky": "^8.0.3",
     "less": "^4.1.3",
     "prettier": "^2.7.1",
     "typescript": "^4.6.4",
