--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@unocss/reset": "^0.53.4",
+    "@vueuse/core": "^10.2.1",
+    "element-plus": "^2.3.7",
     "vue": "^3.2.37",
     "vue-router": "4"
   },
@@ -25,6 +28,9 @@
     "less": "^4.1.3",
     "prettier": "^2.7.1",
     "typescript": "^4.6.4",
+    "unocss": "^0.53.4",
+    "unplugin-auto-import": "^0.16.4",
+    "unplugin-vue-components": "^0.25.1",
     "vite": "^3.1.0",
     "vue-tsc": "^1.0.1"
   }
