--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
     "@unocss/reset": "^0.53.4",
-    "@vueuse/core": "^10.2.1",
+    "@vueuse/core": "^9.13.0",
     "element-plus": "^2.3.7",
     "vue": "^3.2.37",
     "vue-router": "4"
