--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
+    "@iconify-json/ep": "^1.1.11",
     "@types/node": "^18.7.16",
     "@vitejs/plugin-vue": "^3.1.0",
     "eslint": "^8.23.0",
@@ -31,6 +32,7 @@
     "typescript": "^4.6.4",
     "unocss": "^0.53.4",
     "unplugin-auto-import": "^0.16.4",
+    "unplugin-icons": "^0.16.3",
     "unplugin-vue-components": "^0.25.1",
     "vite": "^3.1.0",
     "vue-tsc": "^1.0.1"
