--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
+    "@iconify-json/carbon": "^1.1.18",
     "@iconify-json/ep": "^1.1.11",
     "@types/node": "^18.7.16",
     "@vitejs/plugin-vue": "^3.1.0",
