--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "@iconify-json/mdi": "^1.1.66",
     "@unocss/reset": "^0.53.4",
     "@vueuse/core": "^10.2.1",
     "element-plus": "^2.3.7",
