--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@iconify-json/mdi": "^1.1.66",
     "@unocss/reset": "^0.53.4",
     "@vueuse/core": "^10.2.1",
+    "canvas-confetti": "^1.9.2",
     "element-plus": "^2.3.7",
     "vue": "^3.2.37",
     "vue-router": "4"
