--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "canvas-confetti": "^1.9.2",
     "element-plus": "^2.3.7",
     "vue": "^3.2.37",
+    "vue-demi": "^0.14.8",
     "vue-router": "4"
   },
   "devDependencies": {
